package com.conect4maxmax.conect4.models;

public class Settings {
    
}
